--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -20,11 +20,11 @@
     margin-right: 8px;
 }
 
-.titleSign{
+.css-1wc848c-MuiFormHelperText-root{
 
-    margin-top: 20;
     
-    color:white
+    color:white !important;
+   
 
 }
 
