--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -8,20 +8,20 @@
    
     text-align: center;
     position: absolute;
-    left: 30%;
+    left: 50%;
     top: 10%;
     transform: translate(-50%,-50%); 
     width: 100%;
 }
 
 .welcome {
-    font-size: 60px;
+    font-size: 40px;
     
     font-weight: 500;
-    color:#194D78;
+    color:darkgrey;
     letter-spacing: 5px;
     margin-bottom: 20px;
-    
+    margin-top: 120px;
     position: relative;
     animation: text 3s 1;
 }
@@ -35,7 +35,7 @@
     }
 
     30%{
-        letter-spacing: 25px;
+        letter-spacing: 15px;
         margin-bottom: -40px;
     }
 
