--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -18,7 +18,7 @@
     font-size: 40px;
     
     font-weight: 500;
-    color:darkgrey;
+    color:gray;
     letter-spacing: 5px;
     margin-bottom: 20px;
     margin-top: 120px;
